ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dummy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-app-service
                port:
                  number: 80
